--- a/myStyle.css
+++ b/myStyle.css
@@ -14,3 +14,21 @@ h1 {
 #my-app2 {
 	color: orange;
 }
+
+#conteudo {
+	color: red;
+}
+
+categoria {
+	
+}
+
+select{
+	color: green;
+
+}
+
+.laranjado{
+	color: rgb(240, 130, 6);
+	font-size: 30px;
+}
